# obsidian-article-catalogue

./: .gitignore  README.md  pyproject.toml
src/obscat/: articles.py  catalogue.py  pdf2img.py  state.py
